Remove defaultValue and use value for controlled form - Fix overflow of SearchTable and make columns fixed

--- a/frontend/src/components/Search/Search.css
+++ b/frontend/src/components/Search/Search.css
@@ -1,5 +1,4 @@
 .metadata .ant-collapse-content {
-  overflow-y: scroll;
   width: 100%;
   max-height: 500px;
 }
